--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,11 @@
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "chokidar": "^3.6.0",
+    "electron-serve": "^1.3.0",
+    "electron-unhandled": "^4.0.1",
+    "electron-updater": "^6.1.8",
+    "electron-window-state": "^5.0.3",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +45,7 @@
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "cypress": "^13.5.0",
+    "electron": "^29.1.5",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
