--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@types/react-router-dom": "^5.3.3",
     "chokidar": "^3.6.0",
     "electron-serve": "^1.3.0",
+    "electron-store": "^8.2.0",
     "electron-unhandled": "^4.0.1",
     "electron-updater": "^6.1.8",
     "electron-window-state": "^5.0.3",
