--- a/app/package.json
+++ b/app/package.json
@@ -28,11 +28,13 @@
     "electron-unhandled": "^4.0.1",
     "electron-updater": "^6.1.8",
     "electron-window-state": "^5.0.3",
+    "immer": "^10.0.4",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@capacitor/cli": "5.7.4",
